Entidad 'comments' y su CRUD, test y documentacion en OpenAPI
